--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,20 @@
-language: python
+language: bash
+services: docker
 
-python:
-  - "2.7"
+install:
+  - git clone https://github.com/docker-library/official-images.git ~/official-images
 
-script: 
-  - python hello.py
+before_script:
+  - env | sort
+  - image='hello-world'
+
+script:
+  - ./update.sh
+  - test -z "$(git status --porcelain '**/hello' '**/nanoserver/hello.txt')"
+  - travis_retry docker build -t "$image" amd64/hello-world
+  - ~/official-images/test/run.sh "$image"
+
+after_script:
+  - docker images
+
+# vim:set et ts=2 sw=2:
