--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,4 @@ language: bash
 services: docker
 
 before_install:
-- docker run hello-world
-- echo $(docker ps -q)
-- docker logs $(docker ps -q)
-# vim:set et ts=2 sw=2:
+- docker build -t proxy_pool .
