--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ language: bash
 services: docker
 
 before_install:
-- docker pull clarencep/proxy-pool-docker
-- docker ps -a
+- docker pull clarencep/proxy-pool-docker:latest
+- docker images
