--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,4 @@ services: docker
 before_install:
 - docker pull clarencep/proxy-pool-docker:latest
 - docker images
+- docker run -it clarencep/proxy-pool-docker:latest
