--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ before_install:
 - docker pull clarencep/proxy-pool-docker:latest
 - docker images
 - docker run -it clarencep/proxy-pool-docker:latest
+- ifconfig
