--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ services: docker
 before_install:
 - docker pull clarencep/proxy-pool-docker:latest
 - docker images
-- ifconfig
-- docker run -it clarencep/proxy-pool-docker:latest
+- curl ifconfig.me 
+- docker run -d clarencep/proxy-pool-docker:latest
