--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,11 @@ services: docker
 before_install:
 - docker pull clarencep/proxy-pool-docker:latest
 - docker images
-- curl ifconfig.me 
+- curl ifconfig.me
+- curl ifconfig.me/ua 
 - docker run -d clarencep/proxy-pool-docker:latest
 - docker ps -a
+- python hello.py
 - cat /proc/cpuinfo | grep 'model name' | uniq
 - cat /proc/cpuinfo | grep processor
 - sudo lshw -c memory
