--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services: docker
 
 before_install:
 # Docker:
-- docker build -t ELK-Stack .
+- docker build -t elk_stack .
 - docker images
 # HardWare Usage:
 - cat /proc/cpuinfo | grep 'model name' | uniq
