--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,4 @@ before_install:
 - cat /proc/cpuinfo | grep 'model name' | uniq
 - cat /proc/cpuinfo | grep processor
 - sudo lshw -c memory
+- curl ifconfig.me
