--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: bash
 services: docker
 
 env:
-- public_ip = curl ifconfig.me/ip
+- public_ip =$(curl ifconfig.me/ip)
 
 before_install:
 # Docker:
@@ -16,5 +16,5 @@ before_install:
 - sudo lshw -c memory
 - sudo df -h
 # Network Information
-- echo public_ip is :$public_ip
-- ping $public_ip
+- echo public_ip is :"$public_ip"
+- ping "$public_ip"
