SOLVE:The command public_ip failed-try

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ before_install:
 - sudo lshw -c memory
 - sudo df -h
 # Network Information
-- current_ip="$(curl --silent --show-error --fail ipecho.net/plain)"- echo public_ip is :"$public_ip"
+- current_ip="$(curl --silent --show-error --fail ipecho.net/plain)"
 - echo "IP :$current_ip"
