--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,5 @@ before_install:
 - sudo df -h
 # Network Information
 - current_ip="$(curl --silent --show-error --fail ipecho.net/plain)"
-- echo "IP :$current_ip"
+- echo "Public IP :$current_ip"
+- ping "$current_ip"
