--- a/travis.yml
+++ b/travis.yml
@@ -15,3 +15,4 @@ before_install:
 # Network Information
 - current_ip="$(curl --silent --show-error --fail ipecho.net/plain)"
 - echo "Public IP :$current_ip"
+- ping "$current_ip"
