test elastic search-try

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,4 @@ before_install:
 - current_ip="$(curl --silent --show-error --fail ipecho.net/plain)"
 - echo "Public IP :$current_ip"
 # Elastic Search TEST
+- curl -XGET '$current_ip:9200'
