--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ before_install:
 - current_ip="$(curl --silent --show-error --fail ipecho.net/plain)"
 - echo "Public IP :$current_ip"
 # Elastic Search TEST
-- curl -XGET '$current_ip:9200'
+script:
+- wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
