--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,4 @@ before_install:
 # Elastic Search TEST
 script:
 - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
+- curl http://127.0.0.1:9200
