--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
 - ifconfig
 # Elastic Search TEST
 script:
+- docker logs elk_container
 - wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200
 - curl --head http://127.0.0.1:9200
 - curl --head http://www.yourdomain.com/
